@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2024 pydot contributors
+#
+# SPDX-License-Identifier: MIT
+
 *.py eol=lf
 *.dot eol=lf
 *.txt eol=lf
